<resources>

    <string name="app_name">Work Out System</string>
    <string name="menu_settings">Settings</string>

    <!-- titulos de telas e outros titulos -->

    <string name="title_activity_tela_principal">Principal</string>
    <string name="title_activity_login">Login</string>
    <string name="title_project">Work Out System</string>
    <string name="title_activity_tela_perfil">Perfil</string>
    <string name="title_activity_tela_sobre">Sobre</string>
    <string name="title_activity_tela_exercicio">Exercicios</string>
    <string name="title_activity_tela_rotina">Rotinas</string>
    <string name="title_activity_tela_ficha">Ficha</string>
    <string name="title_activity_tela_medida">Medidas</string>
    <string name="title_activity_tela_novousuario">Novo Usuario</string>
    <string name="title_activity_tela_grafico">Graficos</string>
    <string name="title_activity_tela_objetivo">Objetivos</string>
    <string name="title_activity_tela_evolucao">Evolução</string>
    <string name="title_activity_tela_ajuda">Ajuda</string>
    <string name="title_activity_configuracoes">Configurações</string>
    <string name="title_activity_tela_status">Status</string>

    <!-- texto medidas ! -->

    <string name="label_altura">Altura</string>
    <string name="label_peso">Peso</string>
    <string name="label_braco">Braço</string>
    <string name="label_quadril">Quadril</string>
    <string name="label_cintura">Cintura</string>
    <string name="label_peito">Peito</string>
    <string name="label_panturrilha">Panturilha</string>
    <string name="label_coxa">Coxa</string>
    <string name="label_direita">Dir.</string>
    <string name="label_esquerda">Esq.</string>
    <string name="botao_add">+</string>
    <string name="botao_sub">-</string>
    <string name="botao_salvar">Salvar</string>
    <string name="botao_sair">Sair</string>

    <!-- texto em Geral -->
    <string name="label_dadospessoais">Dados Pessoais</string>
    <string name="label_frequencia">Frequencia</string>
    <string name="check_segunda">Seg</string>
    <string name="check_terca">Ter</string>
    <string name="check_quarta">Qua</string>
    <string name="check_quinta">Qui</string>
    <string name="check_sexta">Sex</string>
    <string name="check_sabado">Sab</string>
    <string name="check_domingo">Dom</string>
    <string name="botao_excluir">Excluir</string>
    <string name="botao_cadastro">Cadastrar</string>
    <string name="botao_alterar">Alterar</string>
    <string name="botao_cancelar">Cancelar</string>
    <string name="label_nomeapelido">Nome/Apelido</string>
    <string name="label_datanasc">Data de Nascimento</string>
    <string name="label_sexo">Sexo</string>
    <string name="radio_masculino">Masculino</string>
    <string name="radio_feminino">Feminino</string>
    <string name="botao_atualizarperfil">Atualizar Perfil</string>
    <string name="botao_medidas">Medidas</string>
    <string name="botao_status">Status</string>
    <string name="botao_login"> Entrar</string>
    <string name="botao_novousuario">Novo Usuario</string>
    <string name="botao_definirobjetivo">Definir Objetivo</string>
    <string name="botao_avatar">Avatar</string>
    <string name="botao_grafico">Grafico</string>
    <string name="mostrar_caracter">Mostrar Senha</string>
    <string name="botao_cadastrar_se">Cadastrar-se</string>

    <!-- texto botões perfil -->
    <!-- texto de botoes da tela principal -->

    <string name="botao_exercicio">Exercicio</string>
    <string name="botao_rotina"> Rotina</string>
    <string name="botao_perfil">Perfil </string>
    <string name="botao_configuracao">Conf.</string>
    <string name="botao_objetivo">Objetivos</string>
    <string name="botao_evolucao">Evolução</string>
    <string name="botao_ajuda"> Ajuda</string>
    <string name="botao_ficha">Ficha</string>
    <string name="botao_sobre"> Sobre</string>

    <!-- texto de label -->

    <string name="label_usuario">Usuario :</string>
    <string name="label_senha">Senha :</string>
    <string name="label_confirmarsenha">Confirmar Senha:</string>
    <string name="label_diasemana">Dia Semana</string>
    <!-- Ajudas -->


    <!-- texto rotina -->
    <string name="label_treino_dia">Treino Dia</string>
    <string name="label_grupo_muscular">Grupo Muscular</string>
    <string name="label_grupo_muscular_trab">Peito e Costas</string>
    <string name="button_realizar_treino">Realizar</string>

    <!-- tela ficha grupo -->
    <string name="check_peito">Peito</string>
    <string name="check_ombro">Ombro</string>
    <string name="check_biceps">Biceps</string>
    <string name="check_abdomen">Abdomen</string>
    <string name="check_costas">Costas</string>
    <string name="check_triceps">Triceps</string>
    <string name="check_perna">Perna</string>
    <string name="label_treino">Treino</string>
    <string name="button_continuar">Continuar</string>

</resources>