<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_padrao"
    android:gravity="center"
    android:padding="10dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="100" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/label_usuario"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/tvUsuario"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="90" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/label_senha"
            android:textColor="@android:color/white" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="90"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/label_confirmarsenha"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/pw_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@android:color/darker_gray"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="100" >

        <Button
            android:id="@+id/btn_cadastrar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/botao_cadastrar_se" />

        <Button
            android:id="@+id/tg_mostrar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/mostrar_caracter" />
    </LinearLayout>

</LinearLayout>