<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_padrao"
    android:orientation="vertical"
    android:padding="20dp" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="100" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                android:weightSum="100" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/label_dadospessoais"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                android:weightSum="150" >

                <TextView
                    android:id="@+id/tv_nome"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:padding="5dp"
                    android:text="@string/label_nomeapelido"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_datanasc"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:padding="5dp"
                    android:text="@string/label_datanasc"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_sexousuario"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:padding="5dp"
                    android:text="@string/label_sexo"
                    android:textColor="@android:color/white" />
                
                <TextView
                    android:id="@+id/tv_frequenciausuario"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:padding="5dp"
                    android:text="@string/label_frequencia"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                android:weightSum="100" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/botao_medidas"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                android:weightSum="150" >

                <TextView
                    android:id="@+id/tv_alturaa"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:padding="5dp"
                    android:text="@string/label_altura"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_datanascc"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:padding="5dp"
                    android:text="@string/label_peso"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_cinturaa"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:padding="5dp"
                    android:text="@string/label_cintura"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_quadrill"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:padding="5dp"
                    android:text="@string/label_quadril"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_peitoo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:padding="5dp"
                    android:text="@string/label_peito"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                android:weightSum="150" >

                <TextView
                    android:id="@+id/tv_bracoo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:padding="5dp"
                    android:text="@string/label_braco"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                android:weightSum="100" >

                <TextView
                    android:id="@+id/tv_bracodir"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:padding="5dp"
                    android:text="@string/label_direita"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_bracoesq"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:padding="5dp"
                    android:text="@string/label_esquerda"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                android:weightSum="150" >

                <TextView
                    android:id="@+id/tv_coxaa"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:padding="5dp"
                    android:text="@string/label_coxa"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                android:weightSum="100" >

                <TextView
                    android:id="@+id/tv_coxadir"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:padding="5dp"
                    android:text="@string/label_direita"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_coxaesq"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:padding="5dp"
                    android:text="@string/label_esquerda"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                android:weightSum="150" >

                <TextView
                    android:id="@+id/tv_panturrilhaa"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:padding="5dp"
                    android:text="@string/label_panturrilha"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                android:weightSum="100" >

                <TextView
                    android:id="@+id/tv_panturillhadir"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:padding="5dp"
                    android:text="@string/label_direita"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_panturillhaesq"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:padding="5dp"
                    android:text="@string/label_esquerda"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>