<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    android:background="@drawable/background_login"
    android:padding="20dp" >
    
    
    
    
    
    <LinearLayout
        android:weightSum="100"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="vertical"
        >    	
        	<!-- Text view e Edit Text Login -->
        	<TextView
        	    android:textColor="@android:color/white"
	            android:layout_weight="10"
	            android:text="@string/label_usuario"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content" 
	            
	            />
        	<EditText
	    	    android:layout_weight="90"
		        android:id="@+id/etLogin"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        
		        />
        	 	<!-- Text view e Edit Text Senha-->
	    	
	        <TextView
	            android:textColor="@android:color/white"
	            android:layout_weight="10"
	            android:text="@string/label_senha"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content" 
	           />
	        
	    	<EditText
	    	    android:layout_weight="90"
		        android:id="@+id/etSenha"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:inputType="textPassword"
		        />
      </LinearLayout>
    
    
    <LinearLayout
        android:weightSum="100"
        android:layout_width="fill_parent"
        android:padding="20dp" 
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
		
			    <Button
			        android:layout_weight="50"
			        android:id="@+id/btn_login"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/botao_login"
			        android:onClick="onClick" 
			        />
			    <Button
			        android:id="@+id/btn_novousuario"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:layout_weight="50"
			        android:text="@string/botao_novousuario"
			        android:onClick="onClick"
			        />
			        
    </LinearLayout>

</LinearLayout>